# vv

./: .fourmolu.yaml  .gitignore  ARCHITECTURE.md  BUSINESS_REQUIREMENTS.md  CHANGELOG.md  LICENSE  README.md  cabal.project  format-with-extensions.ps1  format.sh  fourmolu.yaml  vv.cabal
app/: Main.hs
app/Adapter/: Env.hs
app/Adapter/Controller/: IAM.hs
app/Adapter/Presenter/: IAM.hs  Query.hs
app/Adapter/TUI/Brick/: App.hs  Runtime.hs
app/Adapter/View/Brick/: App.hs  Navigation.hs  Screens.hs  Types.hs  Widgets.hs
app/Adapter/View/Brick/Screen/: Home.hs  Placeholder.hs
app/Adapter/View/Components/: Button.hs  Form.hs  Layout.hs  LogViewer.hs  Modal.hs  Table.hs
bench/: Main.hs
src/App/DTO/: Request.hs  Response.hs
src/App/DTO/Request/: Closing.hs  IAM.hs  Organization.hs  Transaction.hs
src/App/DTO/Response/: Closing.hs  FinancialStatement.hs  IAM.hs  Ledger.hs  Transaction.hs
src/App/Ports/: Command.hs  Commands.hs  Output.hs  Query.hs
src/App/Ports/Command/: Adjustment.hs  Audit.hs  Closing.hs  Consolidation.hs  FinancialStatement.hs  FixedAsset.hs  IAM.hs  Lease.hs  Ledger.hs  Management.hs  MasterData.hs  Organization.hs  Reproducibility.hs  Revenue.hs  Tax.hs  Transaction.hs  Valuation.hs  Workflow.hs
src/App/Ports/Output/: Closing.hs  FinancialStatement.hs  IAM.hs  Ledger.hs  Transaction.hs
src/App/Ports/Query/: Closing.hs  FinancialStatement.hs  IAM.hs  Ledger.hs  MasterData.hs  Organization.hs  Transaction.hs
src/App/UseCase/: IAM.hs
src/App/UseCase/IAM/: ActivateUser.hs  AssignRole.hs  DeactivateUser.hs  GrantPermission.hs  Internal.hs  ListUsers.hs  Login.hs  Logout.hs  RegisterUser.hs  RevokePermission.hs  RevokeRole.hs
src/Application/User/Boundary/Input/: ActivateUserUseCase.hs
src/Application/User/Boundary/Output/: ActivateUserPort.hs
src/Application/User/DTOs/Request/: ActivateUserRequest.hs
src/Application/User/DTOs/Response/: ActivateUserResponse.hs
src/Application/User/Interactors/: ActivateUserInteractor.hs
src/Application/User/Queries/: UserQueryPort.hs
src/Domain/: Shared.hs
src/Domain/Accounting/: ChartOfAccounts.hs  ExchangeRate.hs  FiscalPeriod.hs  JournalEntry.hs
src/Domain/Accounting/ChartOfAccounts/: Errors.hs  Events.hs  Repository.hs
src/Domain/Accounting/ChartOfAccounts/ValueObjects/: AccountClass.hs  AccountCode.hs  AccountName.hs  AccountNature.hs  StatementSection.hs
src/Domain/Accounting/ExchangeRate/: Errors.hs  Events.hs  Repository.hs
src/Domain/Accounting/ExchangeRate/Services/: Translation.hs
src/Domain/Accounting/ExchangeRate/ValueObjects/: MonetaryClass.hs  RateKind.hs
src/Domain/Accounting/FiscalPeriod/: Errors.hs  Events.hs  Repository.hs
src/Domain/Accounting/FiscalPeriod/ValueObjects/: FiscalPeriodId.hs  PeriodState.hs  Version.hs
src/Domain/Accounting/JournalEntry/: Errors.hs  Events.hs  Repository.hs
src/Domain/Audit/: AuditTrail.hs  ClosingProcess.hs
src/Domain/Audit/AuditTrail/: Errors.hs  Events.hs  Repository.hs
src/Domain/Audit/AuditTrail/ValueObjects/: Version.hs  (+2 more)
src/Domain/Audit/ClosingProcess/: Errors.hs  Events.hs  Repository.hs
src/Domain/IAM/: Permission.hs  Role.hs  User.hs
src/Domain/IAM/Permission/: Errors.hs  Events.hs  Repository.hs
src/Domain/IAM/Role/: Errors.hs  Events.hs  Repository.hs
src/Domain/IAM/User/: Errors.hs  Events.hs  Repository.hs
src/Domain/IFRS/: DeferredTax.hs  FairValue.hs  FinancialInstrument.hs  FixedAsset.hs  Impairment.hs  Inventory.hs  Lease.hs  Provision.hs  Revenue.hs  Segment.hs
src/Domain/IFRS/DeferredTax/: Errors.hs  Events.hs  Repository.hs
src/Domain/IFRS/FairValue/: Errors.hs  Events.hs  Repository.hs
src/Domain/IFRS/FinancialInstrument/: Errors.hs  Events.hs  Repository.hs
src/Domain/IFRS/FixedAsset/: Errors.hs  Events.hs  Repository.hs
src/Domain/IFRS/Impairment/: Errors.hs  Events.hs  Repository.hs
src/Domain/IFRS/Inventory/: Errors.hs  Events.hs  Repository.hs
src/Domain/IFRS/Lease/: Errors.hs  Events.hs  Repository.hs
src/Domain/IFRS/Provision/: Errors.hs  Events.hs  Repository.hs
src/Domain/IFRS/Revenue/: Errors.hs  Events.hs  Repository.hs
src/Domain/IFRS/Segment/: Errors.hs  Events.hs  Repository.hs
src/Domain/Master/: Counterparty.hs  Employee.hs  Product.hs
src/Domain/Ops/: ApprovalWorkflow.hs  BankAccount.hs  BankStatement.hs  Budget.hs  TaxConfiguration.hs
src/Domain/Ops/ApprovalWorkflow/: Errors.hs  Events.hs  Repository.hs
src/Domain/Ops/BankAccount/: Errors.hs  Events.hs  Repository.hs
src/Domain/Ops/BankStatement/: Errors.hs  Events.hs  Repository.hs
src/Domain/Ops/Budget/: Errors.hs  Events.hs  Repository.hs
src/Domain/Ops/TaxConfiguration/: Errors.hs  Events.hs  Repository.hs
src/Domain/Org/: BusinessUnit.hs  CostCenter.hs  Organization.hs
src/Domain/Org/Organization/: Errors.hs  Events.hs  Repository.hs
src/Domain/User/: Errors.hs  Events.hs  Repository.hs
src/Domain/User/Entities/: Root.hs
src/Domain/User/Services/: Factory.hs  Uniqueness.hs
src/Domain/User/ValueObjects/: Email.hs  UserId.hs  UserName.hs  UserState.hs  Version.hs
src/Infra/Drivers/: FileSystem.hs  Time.hs
src/Infra/Persistence/SQLite/: EventStore.hs  Projection.hs  Schema.hs
src/Infra/Queries/SQLite/: BalanceSheet.hs  GeneralLedger.hs  TrialBalance.hs
src/Infra/Read/: IAM.hs
src/Infra/Repositories/: Accounting.hs  Audit.hs  IAM.hs  Ops.hs
src/Infra/Write/: EventStore.hs  Projection.hs  Schema.hs  Serialise.hs
test/: Main.hs  Spec.hs
test/App/IAM/: ActivateUserSpec.hs  DeactivateUserSpec.hs  RegisterUserSpec.hs  Spec.hs
test/Application/User/Interactors/: ActivateUserInteractorSpec.hs
test/Domain/Accounting/: ChartOfAccountsSpec.hs  ExchangeRateSpec.hs  FiscalPeriodSpec.hs  JournalEntrySpec.hs  Spec.hs
test/Domain/IAM/: PermissionSpec.hs  RoleSpec.hs  Spec.hs  UserSpec.hs
test/Domain/IFRS/: FinancialInstrumentSpec.hs  LeaseSpec.hs  RevenueSpec.hs  Spec.hs
test/Domain/Shared/: SharedSpec.hs
test/Domain/User/Entities/: RootSpec.hs
test/Support/: Assert.hs  Text.hs
test/Support/Accounting/: Fixtures.hs
test/Support/IAM/: Fixtures.hs  MockEnv.hs
(+90 files in other folders)
