cabal-version:      3.4
name:               vv
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             ukihot
maintainer:         tokunaga.y@tyco.co.jp
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options:
        -Wall
        -Wno-orphans
        -Wno-missing-home-modules
        -Wx-partial

-- еЕ±йАЪгБЃжЛ°еЉµж©ЯиГљ
common extensions
    default-extensions:
        -- еЯЇжЬђ
        OverloadedStrings
        LambdaCase
        MultiWayIf
        -- еЮЛгВЈгВєгГЖгГ†гГїDDDзФ® (GADT / зКґжЕЛзЃ°зРЖ)
        GADTs
        DataKinds
        KindSignatures
        -- гГЗгГ©гВ§гГУгГ≥гВ∞ (гВ≥гГЉгГЙзФЯжИРгБЃиЗ™еЛХеМЦ)
        DerivingStrategies
        GeneralizedNewtypeDeriving
        StandaloneDeriving
        -- гВѓгГ™гГЉгГ≥гВҐгГЉгВ≠гГЖгВѓгГБгГ£гГїDIзФ® (еЮЛгВѓгГ©гВєеИґзіД)
        MultiParamTypeClasses
        FlexibleInstances
        FlexibleContexts
        UndecidableInstances
        --гГЖгВєгГИгВ≥гГЉгГЙз≠ЙгБЃеЮЛе§ЙжХ∞еЫЇеЃЪгБЂдЊњеИ©
        ScopedTypeVariables

library
    import:           warnings, extensions
    exposed-modules:
        -- Domainе±§
        Domain.User.Errors
        Domain.User.Events
        Domain.User.Repository
        Domain.User.Entities.Root
        Domain.User.Entities.Internal.Profile
        Domain.User.Services.Factory
        Domain.User.Services.Uniqueness
        Domain.User.ValueObjects.Email
        Domain.User.ValueObjects.UserId
        Domain.User.ValueObjects.UserName
        Domain.User.ValueObjects.Version
        Domain.User.ValueObjects.UserState
        -- Applicationе±§
        Application.User.Boundary.Input.ActivateUserUseCase
        Application.User.Boundary.Output.ActivateUserPort
        Application.User.Interactors.ActivateUserInteractor
        Application.User.DTOs.Request.ActivateUserRequest
        Application.User.DTOs.Response.ActivateUserResponse
        Application.User.Queries.UserQueryPort
    hs-source-dirs:   src
    build-depends:
        base ^>=4.20.0.0,
        text,
        mtl,
        containers
    default-language: GHC2021

executable vv
    import:           warnings, extensions
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:
        base,
        vv,
        mtl,
        containers,
        text
    default-language: GHC2021

test-suite vv-test
    import:           warnings, extensions
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test
    build-tool-depends: hspec-discover:hspec-discover
    build-depends:
        base,
        vv,
        hspec,
        text,
        mtl,
        containers
    default-language: GHC2021