cabal-version:      3.4
name:               vv
version:            0.1.0.0
synopsis:           IFRS-based double-entry financial accounting system
description:
    A modern plain-text financial accounting system with IFRS support,
    built on Event Sourcing / CQRS + DDD architecture.

license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Yu Tokunaga
maintainer:         your@email.com
copyright:          2026 (c) Yu Tokunaga
category:           Finance, Accounting
build-type:         Simple
tested-with:        GHC == 9.8.2

-- ────────────────────────────────────────────────────────────────────────────
-- Common settings
-- ────────────────────────────────────────────────────────────────────────────
common common-options
    default-language:   GHC2021
    default-extensions:
        LambdaCase
        MultiWayIf
        OverloadedStrings
        OverloadedRecordDot
        RecordWildCards
        DerivingStrategies
        DeriveAnyClass
        DataKinds
        TypeFamilies
        GADTs
        ViewPatterns
        PatternSynonyms
        StrictData
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-deriving-strategies
        -Wredundant-constraints
        -Wunused-packages
        -fhide-source-paths

-- ────────────────────────────────────────────────────────────────────────────
-- Library
-- ────────────────────────────────────────────────────────────────────────────
library
    import:           common-options
    hs-source-dirs:   src
    build-depends:
        base >= 4.17 && < 5,
        sqlite-simple,
        direct-sqlite,
        text,
        bytestring,
        time,
        containers,
        aeson,
        uuid,
        safe-money,
        Decimal,
        effectful-core,
        mtl,
        exceptions

    exposed-modules:
        Domain.IAM.User
        Domain.IAM.Role
        Domain.IAM.Permission
        Domain.Org.Organization
        Domain.Accounting.JournalEntry
        Domain.Accounting.ChartOfAccounts
        Domain.Accounting.FiscalPeriod
        Domain.Accounting.ExchangeRate
        Domain.Ops.Budget
        Domain.Ops.BankAccount
        Domain.Ops.BankStatement
        Domain.Ops.ApprovalWorkflow
        Domain.Ops.TaxConfiguration
        Domain.IFRS.Lease
        Domain.IFRS.Revenue
        Domain.IFRS.FinancialInstrument
        Domain.IFRS.Segment
        Domain.Audit.AuditTrail
        Domain.Audit.ClosingProcess

    other-modules:
        Domain.Shared
        Domain.IAM.Permission.Entities.Profile
        Domain.IAM.Permission.Errors
        Domain.IAM.Permission.Events
        Domain.IAM.Permission.Repository
        Domain.IAM.Permission.Services.Factory
        Domain.IAM.Permission.Services.Uniqueness
        Domain.IAM.Permission.ValueObjects.PermissionCode
        Domain.IAM.Permission.ValueObjects.PermissionId
        Domain.IAM.Permission.ValueObjects.PermissionName
        Domain.IAM.Permission.ValueObjects.PermissionState
        Domain.IAM.Permission.ValueObjects.Version
        Domain.IAM.Role.Entities.Profile
        Domain.IAM.Role.Errors
        Domain.IAM.Role.Events
        Domain.IAM.Role.Repository
        Domain.IAM.Role.Services.Factory
        Domain.IAM.Role.Services.Uniqueness
        Domain.IAM.Role.ValueObjects.RoleId
        Domain.IAM.Role.ValueObjects.RoleName
        Domain.IAM.Role.ValueObjects.RoleState
        Domain.IAM.Role.ValueObjects.Version
        Domain.IAM.User.Entities.Profile
        Domain.IAM.User.Errors
        Domain.IAM.User.Events
        Domain.IAM.User.Repository
        Domain.IAM.User.Services.Factory
        Domain.IAM.User.Services.Uniqueness
        Domain.IAM.User.ValueObjects.Email
        Domain.IAM.User.ValueObjects.UserId
        Domain.IAM.User.ValueObjects.UserName
        Domain.IAM.User.ValueObjects.UserState
        Domain.IAM.User.ValueObjects.Version
        App.Ports.Command
        App.Ports.Query
        App.Ports.Output
        App.DTO.Response
        App.DTO.Request
        App.UseCase.IAM
        Infra.Persistence.SQLite.EventStore
        Infra.Persistence.SQLite.Schema
        Infra.Persistence.SQLite.Projection
        Infra.Repositories.IAM
        Infra.Repositories.Accounting
        Infra.Repositories.Ops
        Infra.Repositories.Audit
        Infra.Queries.SQLite.BalanceSheet
        Infra.Queries.SQLite.TrialBalance
        Infra.Queries.SQLite.GeneralLedger
        Infra.Drivers.Time
        Infra.Drivers.FileSystem

library vv-internal
    import:           common-options
    hs-source-dirs:   src
    build-depends:
        base >= 4.17 && < 5,
        sqlite-simple,
        direct-sqlite,
        text,
        bytestring,
        time,
        containers,
        aeson,
        uuid,
        safe-money,
        Decimal,
        effectful-core,
        mtl,
        exceptions

    exposed-modules:
        Domain.Shared
        Domain.IAM.Permission.Entities.Profile
        Domain.IAM.Permission.Errors
        Domain.IAM.Permission.Events
        Domain.IAM.Permission.Repository
        Domain.IAM.Permission.Services.Factory
        Domain.IAM.Permission.Services.Uniqueness
        Domain.IAM.Permission.ValueObjects.PermissionCode
        Domain.IAM.Permission.ValueObjects.PermissionId
        Domain.IAM.Permission.ValueObjects.PermissionName
        Domain.IAM.Permission.ValueObjects.PermissionState
        Domain.IAM.Permission.ValueObjects.Version
        Domain.IAM.Role.Entities.Profile
        Domain.IAM.Role.Errors
        Domain.IAM.Role.Events
        Domain.IAM.Role.Repository
        Domain.IAM.Role.Services.Factory
        Domain.IAM.Role.Services.Uniqueness
        Domain.IAM.Role.ValueObjects.RoleId
        Domain.IAM.Role.ValueObjects.RoleName
        Domain.IAM.Role.ValueObjects.RoleState
        Domain.IAM.Role.ValueObjects.Version
        Domain.IAM.User
        Domain.IAM.Role
        Domain.IAM.Permission
        Domain.IAM.User.Entities.Profile
        Domain.IAM.User.Errors
        Domain.IAM.User.Events
        Domain.IAM.User.Repository
        Domain.IAM.User.Services.Factory
        Domain.IAM.User.Services.Uniqueness
        Domain.IAM.User.ValueObjects.Email
        Domain.IAM.User.ValueObjects.UserId
        Domain.IAM.User.ValueObjects.UserName
        Domain.IAM.User.ValueObjects.UserState
        Domain.IAM.User.ValueObjects.Version
        Domain.Org.Organization
        Domain.Accounting.JournalEntry
        Domain.Accounting.ChartOfAccounts
        Domain.Accounting.FiscalPeriod
        Domain.Accounting.ExchangeRate
        Domain.Ops.Budget
        Domain.Ops.BankAccount
        Domain.Ops.BankStatement
        Domain.Ops.ApprovalWorkflow
        Domain.Ops.TaxConfiguration
        Domain.IFRS.Lease
        Domain.IFRS.Revenue
        Domain.IFRS.FinancialInstrument
        Domain.IFRS.Segment
        Domain.Audit.AuditTrail
        Domain.Audit.ClosingProcess
        App.Ports.Command
        App.Ports.Query
        App.Ports.Output
        App.DTO.Response
        App.DTO.Request
        App.UseCase.IAM
        Infra.Persistence.SQLite.EventStore
        Infra.Persistence.SQLite.Schema
        Infra.Persistence.SQLite.Projection
        Infra.Repositories.IAM
        Infra.Repositories.Accounting
        Infra.Repositories.Ops
        Infra.Repositories.Audit
        Infra.Queries.SQLite.BalanceSheet
        Infra.Queries.SQLite.TrialBalance
        Infra.Queries.SQLite.GeneralLedger
        Infra.Drivers.Time
        Infra.Drivers.FileSystem

-- ────────────────────────────────────────────────────────────────────────────
-- Executable
-- ────────────────────────────────────────────────────────────────────────────
executable vv
    import:           common-options
    hs-source-dirs:   app
    main-is:          Main.hs
    other-modules:
        Adapter.Env
        Adapter.Controller.IAM
        Adapter.Presenter.IAM
        Adapter.View.Brick.App
    build-depends:
        base,
        vv:vv-internal,
        optparse-applicative >= 0.18 && < 1,
        brick >= 2.3 && < 3,
        vty >= 6.1 && < 7,
        stm,
        prettyprinter >= 1.7 && < 2,
        prettyprinter-ansi-terminal >= 1.1 && < 2,
        cassava >= 0.5 && < 1,
        text,
        effectful,
        mtl,
        containers
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N

-- ────────────────────────────────────────────────────────────────────────────
-- Test suite
-- ────────────────────────────────────────────────────────────────────────────
test-suite vv-test
    import:           common-options
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:
        Domain.IAM.Spec
        Domain.IAM.UserSpec
        Domain.IAM.RoleSpec
        Domain.IAM.PermissionSpec
        Domain.Accounting.Spec
        Domain.Accounting.ChartOfAccountsSpec
        Domain.Accounting.FiscalPeriodSpec
        Domain.Accounting.JournalEntrySpec
        Domain.Accounting.ExchangeRateSpec
        Domain.IFRS.Spec
        Domain.IFRS.RevenueSpec
        Domain.IFRS.FinancialInstrumentSpec
        Domain.IFRS.LeaseSpec
        Support.Assert
        Support.IAM.Fixtures
        Support.Accounting.Fixtures
        Support.Text
    build-depends:
        base,
        vv:vv-internal,
        tasty >= 1.5 && < 2,
        tasty-hedgehog >= 1.4 && < 2,
        tasty-hunit >= 0.10 && < 1,
        hedgehog >= 1.4 && < 2,
        text,
        time,
        Decimal,
        safe-money,
        containers

-- ────────────────────────────────────────────────────────────────────────────
-- Benchmark
-- ────────────────────────────────────────────────────────────────────────────
benchmark vv-bench
    import:           common-options
    type:             exitcode-stdio-1.0
    hs-source-dirs:   bench
    main-is:          Main.hs
    build-depends:
        base,
        vv:vv-internal,
        tasty-bench >= 0.3 && < 1,
        deepseq >= 1.4 && < 2,
        time,
        text,
        containers
