cabal-version:      3.4
name:               vv
version:            0.1.0.0
synopsis:           IFRS-based double-entry financial accounting system
description:
    A modern plain-text financial accounting system with IFRS support,
    built on Event Sourcing / CQRS + DDD architecture.

license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Yu Tokunaga
maintainer:         your@email.com
copyright:          2026 (c) Yu Tokunaga
category:           Finance, Accounting
build-type:         Simple
tested-with:        GHC == 9.8.2

-- ────────────────────────────────────────────────────────────────────────────
-- Common settings
-- ────────────────────────────────────────────────────────────────────────────
common common-options
    default-language:   GHC2021
    default-extensions:
        ImportQualifiedPost
        LambdaCase
        MultiWayIf
        OverloadedStrings
        OverloadedRecordDot
        RecordWildCards
        DerivingStrategies
        DeriveAnyClass
        DataKinds
        TypeFamilies
        GADTs
        ViewPatterns
        PatternSynonyms
        StrictData
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wmissing-deriving-strategies
        -Wredundant-constraints
        -Wunused-packages
        -fhide-source-paths

common lib-deps
    build-depends:
        base >= 4.17 && < 5,
        text,
        time,
        mtl,
        transformers

-- ────────────────────────────────────────────────────────────────────────────
-- Internal library (src の唯一のオーナー)
-- executable / test-suite / bench はすべてこれを参照する
-- ────────────────────────────────────────────────────────────────────────────
library vv-internal
    import:           common-options, lib-deps
    hs-source-dirs:   src
    visibility:       public

    exposed-modules:
        -- App
        App.DTO.Request
        App.DTO.Request.Closing
        App.DTO.Request.IAM
        App.DTO.Request.Organization
        App.DTO.Request.Transaction
        App.DTO.Response
        App.DTO.Response.Closing
        App.DTO.Response.FinancialStatement
        App.DTO.Response.IAM
        App.DTO.Response.Ledger
        App.DTO.Response.Transaction
        App.Ports.Command
        App.Ports.Command.Adjustment
        App.Ports.Command.Audit
        App.Ports.Command.Closing
        App.Ports.Command.Consolidation
        App.Ports.Command.FinancialStatement
        App.Ports.Command.FixedAsset
        App.Ports.Command.IAM
        App.Ports.Command.Lease
        App.Ports.Command.Ledger
        App.Ports.Command.Management
        App.Ports.Command.MasterData
        App.Ports.Command.Organization
        App.Ports.Command.Reproducibility
        App.Ports.Command.Revenue
        App.Ports.Command.Tax
        App.Ports.Command.Transaction
        App.Ports.Command.Valuation
        App.Ports.Command.Workflow
        App.Ports.Output
        App.Ports.Output.Closing
        App.Ports.Output.FinancialStatement
        App.Ports.Output.IAM
        App.Ports.Output.Ledger
        App.Ports.Output.Transaction
        App.Ports.Query
        App.Ports.Query.Closing
        App.Ports.Query.FinancialStatement
        App.Ports.Query.IAM
        App.Ports.Query.Ledger
        App.Ports.Query.MasterData
        App.Ports.Query.Organization
        App.Ports.Query.Transaction
        App.UseCase.IAM
        App.UseCase.IAM.ActivateUser
        App.UseCase.IAM.AssignRole
        App.UseCase.IAM.DeactivateUser
        App.UseCase.IAM.GrantPermission
        App.UseCase.IAM.Internal
        App.UseCase.IAM.Login
        App.UseCase.IAM.Logout
        App.UseCase.IAM.RegisterUser
        App.UseCase.IAM.RevokePermission
        App.UseCase.IAM.RevokeRole

        -- Domain.Accounting
        Domain.Accounting.ChartOfAccounts
        Domain.Accounting.ChartOfAccounts.Errors
        Domain.Accounting.ChartOfAccounts.Events
        Domain.Accounting.ChartOfAccounts.Repository
        Domain.Accounting.ChartOfAccounts.ValueObjects.AccountClass
        Domain.Accounting.ChartOfAccounts.ValueObjects.AccountCode
        Domain.Accounting.ChartOfAccounts.ValueObjects.AccountName
        Domain.Accounting.ChartOfAccounts.ValueObjects.AccountNature
        Domain.Accounting.ChartOfAccounts.ValueObjects.StatementSection
        Domain.Accounting.ExchangeRate
        Domain.Accounting.ExchangeRate.Errors
        Domain.Accounting.ExchangeRate.Events
        Domain.Accounting.ExchangeRate.Repository
        Domain.Accounting.ExchangeRate.Services.Translation
        Domain.Accounting.ExchangeRate.ValueObjects.MonetaryClass
        Domain.Accounting.ExchangeRate.ValueObjects.RateKind
        Domain.Accounting.FiscalPeriod
        Domain.Accounting.FiscalPeriod.Errors
        Domain.Accounting.FiscalPeriod.Events
        Domain.Accounting.FiscalPeriod.Repository
        Domain.Accounting.FiscalPeriod.ValueObjects.FiscalPeriodId
        Domain.Accounting.FiscalPeriod.ValueObjects.PeriodState
        Domain.Accounting.FiscalPeriod.ValueObjects.Version
        Domain.Accounting.JournalEntry
        Domain.Accounting.JournalEntry.Entities.CarryingAmountBridge
        Domain.Accounting.JournalEntry.Entities.JournalLine
        Domain.Accounting.JournalEntry.Errors
        Domain.Accounting.JournalEntry.Events
        Domain.Accounting.JournalEntry.Repository
        Domain.Accounting.JournalEntry.Services.Validation
        Domain.Accounting.JournalEntry.ValueObjects.DrCr
        Domain.Accounting.JournalEntry.ValueObjects.JournalEntryId
        Domain.Accounting.JournalEntry.ValueObjects.Version

        -- Domain.Audit
        Domain.Audit.AuditTrail
        Domain.Audit.AuditTrail.Errors
        Domain.Audit.AuditTrail.Events
        Domain.Audit.AuditTrail.Repository
        Domain.Audit.AuditTrail.ValueObjects.AuditAction
        Domain.Audit.AuditTrail.ValueObjects.AuditTrailId
        Domain.Audit.AuditTrail.ValueObjects.Version
        Domain.Audit.ClosingProcess
        Domain.Audit.ClosingProcess.Errors
        Domain.Audit.ClosingProcess.Events
        Domain.Audit.ClosingProcess.Repository
        Domain.Audit.ClosingProcess.ValueObjects.ClosingProcessId
        Domain.Audit.ClosingProcess.ValueObjects.ClosingState
        Domain.Audit.ClosingProcess.ValueObjects.Version

        -- Domain.IAM
        Domain.IAM.Permission
        Domain.IAM.Permission.Entities.Profile
        Domain.IAM.Permission.Errors
        Domain.IAM.Permission.Events
        Domain.IAM.Permission.Repository
        Domain.IAM.Permission.Services.Factory
        Domain.IAM.Permission.Services.Uniqueness
        Domain.IAM.Permission.ValueObjects.PermissionCode
        Domain.IAM.Permission.ValueObjects.PermissionId
        Domain.IAM.Permission.ValueObjects.PermissionName
        Domain.IAM.Permission.ValueObjects.PermissionState
        Domain.IAM.Permission.ValueObjects.Version
        Domain.IAM.Role
        Domain.IAM.Role.Entities.Profile
        Domain.IAM.Role.Errors
        Domain.IAM.Role.Events
        Domain.IAM.Role.Repository
        Domain.IAM.Role.Services.Factory
        Domain.IAM.Role.Services.Uniqueness
        Domain.IAM.Role.ValueObjects.RoleId
        Domain.IAM.Role.ValueObjects.RoleName
        Domain.IAM.Role.ValueObjects.RoleState
        Domain.IAM.Role.ValueObjects.Version
        Domain.IAM.User
        Domain.IAM.User.Entities.Profile
        Domain.IAM.User.Errors
        Domain.IAM.User.Events
        Domain.IAM.User.Repository
        Domain.IAM.User.Services.Factory
        Domain.IAM.User.Services.Uniqueness
        Domain.IAM.User.ValueObjects.Email
        Domain.IAM.User.ValueObjects.UserId
        Domain.IAM.User.ValueObjects.UserName
        Domain.IAM.User.ValueObjects.UserState
        Domain.IAM.User.ValueObjects.Version

        -- Domain.IFRS
        Domain.IFRS.DeferredTax
        Domain.IFRS.DeferredTax.Errors
        Domain.IFRS.DeferredTax.Events
        Domain.IFRS.DeferredTax.Repository
        Domain.IFRS.DeferredTax.ValueObjects.DeferredTaxItemId
        Domain.IFRS.DeferredTax.ValueObjects.Version
        Domain.IFRS.FairValue
        Domain.IFRS.FairValue.Errors
        Domain.IFRS.FairValue.Events
        Domain.IFRS.FairValue.Repository
        Domain.IFRS.FairValue.ValueObjects.FairValueMeasurementId
        Domain.IFRS.FairValue.ValueObjects.Version
        Domain.IFRS.FinancialInstrument
        Domain.IFRS.FinancialInstrument.Entities.EclJudgmentLog
        Domain.IFRS.FinancialInstrument.Entities.EclParameters
        Domain.IFRS.FinancialInstrument.Errors
        Domain.IFRS.FinancialInstrument.Events
        Domain.IFRS.FinancialInstrument.Repository
        Domain.IFRS.FinancialInstrument.Services.EclCalculation
        Domain.IFRS.FinancialInstrument.ValueObjects.EclStage
        Domain.IFRS.FinancialInstrument.ValueObjects.FinancialAssetId
        Domain.IFRS.FinancialInstrument.ValueObjects.Version
        Domain.IFRS.FixedAsset
        Domain.IFRS.FixedAsset.Errors
        Domain.IFRS.FixedAsset.Events
        Domain.IFRS.FixedAsset.Repository
        Domain.IFRS.FixedAsset.ValueObjects.ComponentId
        Domain.IFRS.FixedAsset.ValueObjects.FixedAssetId
        Domain.IFRS.FixedAsset.ValueObjects.Version
        Domain.IFRS.Impairment
        Domain.IFRS.Impairment.Errors
        Domain.IFRS.Impairment.Events
        Domain.IFRS.Impairment.Repository
        Domain.IFRS.Impairment.ValueObjects.CguId
        Domain.IFRS.Impairment.ValueObjects.ImpairmentTestId
        Domain.IFRS.Impairment.ValueObjects.Version
        Domain.IFRS.Inventory
        Domain.IFRS.Inventory.Errors
        Domain.IFRS.Inventory.Events
        Domain.IFRS.Inventory.Repository
        Domain.IFRS.Inventory.ValueObjects.InventoryId
        Domain.IFRS.Inventory.ValueObjects.Version
        Domain.IFRS.Lease
        Domain.IFRS.Lease.Errors
        Domain.IFRS.Lease.Events
        Domain.IFRS.Lease.Repository
        Domain.IFRS.Lease.Services.LeaseCalculation
        Domain.IFRS.Lease.ValueObjects.LeaseId
        Domain.IFRS.Lease.ValueObjects.Version
        Domain.IFRS.Provision
        Domain.IFRS.Provision.Errors
        Domain.IFRS.Provision.Events
        Domain.IFRS.Provision.Repository
        Domain.IFRS.Provision.ValueObjects.ProvisionId
        Domain.IFRS.Provision.ValueObjects.Version
        Domain.IFRS.Revenue
        Domain.IFRS.Revenue.Entities.PerformanceObligation
        Domain.IFRS.Revenue.Entities.RevenueJudgmentLog
        Domain.IFRS.Revenue.Entities.RevenueRecognitionResult
        Domain.IFRS.Revenue.Entities.VariableConsideration
        Domain.IFRS.Revenue.Errors
        Domain.IFRS.Revenue.Events
        Domain.IFRS.Revenue.Repository
        Domain.IFRS.Revenue.Services.PriceAllocation
        Domain.IFRS.Revenue.Services.RevenueRecognition
        Domain.IFRS.Revenue.ValueObjects.AllocationMethod
        Domain.IFRS.Revenue.ValueObjects.ContractId
        Domain.IFRS.Segment
        Domain.IFRS.Segment.Entities.SegmentResult
        Domain.IFRS.Segment.Errors
        Domain.IFRS.Segment.Events
        Domain.IFRS.Segment.Repository
        Domain.IFRS.Segment.ValueObjects.SegmentId

        -- Domain.Ops
        Domain.Ops.ApprovalWorkflow
        Domain.Ops.ApprovalWorkflow.Errors
        Domain.Ops.ApprovalWorkflow.Events
        Domain.Ops.ApprovalWorkflow.Repository
        Domain.Ops.ApprovalWorkflow.ValueObjects.ApprovalState
        Domain.Ops.ApprovalWorkflow.ValueObjects.ApprovalWorkflowId
        Domain.Ops.ApprovalWorkflow.ValueObjects.Version
        Domain.Ops.BankAccount
        Domain.Ops.BankAccount.Errors
        Domain.Ops.BankAccount.Events
        Domain.Ops.BankAccount.Repository
        Domain.Ops.BankAccount.ValueObjects.AccountNumber
        Domain.Ops.BankAccount.ValueObjects.BankAccountId
        Domain.Ops.BankAccount.ValueObjects.BankCode
        Domain.Ops.BankAccount.ValueObjects.Version
        Domain.Ops.BankStatement
        Domain.Ops.BankStatement.Entities.BankTransaction
        Domain.Ops.BankStatement.Errors
        Domain.Ops.BankStatement.Events
        Domain.Ops.BankStatement.Repository
        Domain.Ops.BankStatement.ValueObjects.BankStatementId
        Domain.Ops.BankStatement.ValueObjects.Version
        Domain.Ops.Budget
        Domain.Ops.Budget.Errors
        Domain.Ops.Budget.Events
        Domain.Ops.Budget.Repository
        Domain.Ops.Budget.ValueObjects.BudgetId
        Domain.Ops.Budget.ValueObjects.Version
        Domain.Ops.TaxConfiguration
        Domain.Ops.TaxConfiguration.Errors
        Domain.Ops.TaxConfiguration.Events
        Domain.Ops.TaxConfiguration.Repository
        Domain.Ops.TaxConfiguration.ValueObjects.TaxConfigId
        Domain.Ops.TaxConfiguration.ValueObjects.TaxType
        Domain.Ops.TaxConfiguration.ValueObjects.Version

        -- Domain.Org
        Domain.Org.Organization
        Domain.Org.Organization.Entities.Address
        Domain.Org.Organization.Errors
        Domain.Org.Organization.Events
        Domain.Org.Organization.Repository
        Domain.Org.Organization.ValueObjects.OrganizationId
        Domain.Org.Organization.ValueObjects.OrganizationName
        Domain.Org.Organization.ValueObjects.OrganizationState
        Domain.Org.Organization.ValueObjects.TaxId
        Domain.Org.Organization.ValueObjects.Version

        -- Domain.Shared
        Domain.Shared

        -- Infra
        Infra.Drivers.FileSystem
        Infra.Drivers.Time
        Infra.Persistence.SQLite.EventStore
        Infra.Persistence.SQLite.Projection
        Infra.Persistence.SQLite.Schema
        Infra.Queries.SQLite.BalanceSheet
        Infra.Queries.SQLite.GeneralLedger
        Infra.Queries.SQLite.TrialBalance
        Infra.Repositories.Accounting
        Infra.Repositories.Audit
        Infra.Repositories.IAM
        Infra.Repositories.Ops

-- ────────────────────────────────────────────────────────────────────────────
-- Executable
-- ────────────────────────────────────────────────────────────────────────────
executable vv
    import:           common-options
    hs-source-dirs:   app
    main-is:          Main.hs
    other-modules:
        Adapter.Env
        Adapter.Controller.IAM
        Adapter.Presenter.IAM
        Adapter.View.Components.Form
        Adapter.View.Components.Table
        Adapter.View.Components.Button
        Adapter.View.Components.Layout
        Adapter.View.Components.Modal
        Adapter.View.Brick.App
        Adapter.View.Brick.Types
        Adapter.View.Brick.Navigation
        Adapter.View.Brick.Widgets
        Adapter.View.Brick.Screens
    build-depends:
        base,
        vv:vv-internal,
        brick >= 2.3 && < 3,
        vty >= 6.1 && < 7,
        text-zipper >= 0.13 && < 1,
        stm,
        -- prettyprinter >= 1.7 && < 2,
        -- prettyprinter-ansi-terminal >= 1.1 && < 2,
        -- cassava >= 0.5 && < 1,
        -- effectful,
        text,
        text,
        mtl,
        containers
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N

-- ────────────────────────────────────────────────────────────────────────────
-- Test suite
-- ────────────────────────────────────────────────────────────────────────────
test-suite vv-test
    import:           common-options
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:
        Domain.IAM.Spec
        Domain.IAM.UserSpec
        Domain.IAM.RoleSpec
        Domain.IAM.PermissionSpec
        Domain.Accounting.Spec
        Domain.Accounting.ChartOfAccountsSpec
        Domain.Accounting.FiscalPeriodSpec
        Domain.Accounting.JournalEntrySpec
        Domain.Accounting.ExchangeRateSpec
        Domain.IFRS.Spec
        Domain.IFRS.RevenueSpec
        Domain.IFRS.FinancialInstrumentSpec
        Domain.IFRS.LeaseSpec
        Domain.Shared.SharedSpec
        Support.Assert
        Support.IAM.Fixtures
        Support.Accounting.Fixtures
        Support.Text
    build-depends:
        base,
        vv:vv-internal,
        tasty >= 1.5 && < 2,
        tasty-hedgehog >= 1.4 && < 2,
        tasty-hunit >= 0.10 && < 1,
        hedgehog >= 1.4 && < 2,
        text,
        time,
        Decimal,
        safe-money,
        containers

-- ────────────────────────────────────────────────────────────────────────────
-- Benchmark
-- ────────────────────────────────────────────────────────────────────────────
benchmark vv-bench
    import:           common-options
    type:             exitcode-stdio-1.0
    hs-source-dirs:   bench
    main-is:          Main.hs
    build-depends:
        base,
        vv:vv-internal,
        tasty-bench >= 0.3 && < 1,
        deepseq >= 1.4 && < 2,
        time,
        text,
        containers
